2008-04-04  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.h, src/util.h (start_entertaining_user): Added a new
	parameter, with_button, to allow creating an entertaining dialog
	without cancel button when needed. Updated callers (N75393).

	* src/operations.cc (ip_ensure_network): Updated so it now calls
	to start_entertaining_user with TRUE (N75393).
	(ip_abort_response): Likewise (N75393).
	(if_install): Likewise (N75393).
	(up_remove_with_info): Updated so it now calls to
	start_entertaining_user with FALSE (N75393).

	* src/main.cc (refresh_package_cache_without_user): Updated so it
	now calls to start_entertaining_user with TRUE (N75393).

2008-04-03  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc (ip_download_cur_retry_confirm): Do not ask
	whether to retry, we don't have the UI strings for that.  (Shame
	on me.)

2008-04-03  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/repo.cc (show_catalogue_dialog): call to allow_updating()
	after the dialog has been shown, to avoid possible overlaps.
	Partially fixes N83505.

2008-04-03  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (get_package_list_reply_temp): Set the global
	variable package_list_ready to its correct value (N83547).

2008-04-03  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.8

	* src/operations.cc (ip_install_with_info): Only show packages
	that are not installed at all for a restore operation (N83477).

2008-04-02  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/util.h, src/util.cc (set_entertainment_main_title): Added
	'strong' argument for setting the strong_main_title attribute
	explicitly.
	(set_entertainment_main_title): Do not set the strong_main_title
	attribute to false, that would defeat its purpose.
	(ensure_network_cont): Reset subtitle since we are done.
	* src/main.cc (refresh_package_cache_without_user): Make the main
	title strong (N82724).

	* src/dbus.cc (receive_battery_status_update): Initialize msg.
